frame/support/test/tests/construct_runtime_ui/invalid_module_details.stderr
error: Unexpected tokens, expected one of `::$ident` `::{`, `exclude_parts`, `use_parts`, `=`, `,`
 --> tests/construct_runtime_ui/invalid_module_details.rs:6:17
  |
6 |         system: System::(),
  |                       ^
